...
    <string name="date">기록일</string>
    <string name="content">기록 내용</string>
    <string name="deposit">금액</string>
    <string name="sum">총 금액</string>
    <string name="totalPriceOver">담을 수 있는 행복 수가 넘었습니다 (❁´◡`❁) \n 앞으로 메모 가격에 0을 입력해주세요</string>

    <string name="condition">검색 조건 설정</string>
    <string name="duration">조회 기간</string>
    <string name="sort">정렬</string>
    <string name="newest">최신순</string>
    <string name="oldest">과거순</string>
    <string name="count">개수</string>
    <string name="init">초기화하기</string>

    <string name="picture">사진 추가</string>
    <string name="save">저장하기</string>
    <string name="memoDateFrom">0000.0.00</string>
    <string name="memoDateTo">0000.00.00</string>
    <string name="memo">사소한 행복을 기록해 보세요</string>
    <string name="howHappy">얼마나 행복하셨습니까?</string>
    <string name="cancel">취소</string>
    <string name="OK">확인</string>
    <string name="memoContentEmpty">"행복을 메모해 주세요:)"</string>
    <string name="memoPriceEmpty">"얼마나 행복하셨나요?:D"</string>
    <string name="memoPriceOver">"최대 2,147,483,647까지 입력할 수 있습니다 ;) \n 물론 여러분의 행복 가격은 무한대이지만요 B-)"</string>
    <string name="cantLoadImg">"이미지를 불러올 수 없습니다"</string>
    <string name="imageType">jpg, jpeg, png 이미지만 첨부할 수 있습니다</string>

    <string name="arrowForward">앞으로 이동</string>
    <string name="arrowBack">뒤로 이동</string>
    <string name="cloverIcon">메모 가격 앞에 표시된 클로버 아이콘</string>

    <string name="manual">사용 방법</string>
...
